--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js -ext js,jsx,css",
-    "db-up": "npx sequelize db:create && npx sequelize db:migrate:all && npx sequelize db:seed:all",
+    "db-up": "npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all",
     "db-create": "npx sequelize db:create",
     "db-drop": "npx sequelize db:drop",
     "db-migrate": "npx sequelize db:migrate:undo:all && npx sequelize db:migrate",
